<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_about_fen"
        android:id="@+id/btnAboutFen"
        android:layout_marginTop="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_schedule"
        android:id="@+id/btnSchedule"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/btnAboutFen"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_dictionary"
        android:id="@+id/btnDictionary"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_formulas"
        android:id="@+id/btnFormulas"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/btnDictionary"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_faculty_news"
        android:id="@+id/btnFacultyNews"
        android:layout_below="@+id/btnFormulas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"/>
</RelativeLayout>
